# Sigill

./: .gitignore  AI.md  HANDOFF.md  PROGRESS.md  REVIEW-DECISIONS.md  RUNBOOK.md  TODOS.md  alembic.ini  dashboard.yaml  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: 20260430_0000_0001_initial_schema.py  20260430_2037_7e992ada302b_add_backtest_results_table.py  20260501_0900_a4b1c2d3e4f5_add_market_description_archived.py  20260501_2100_b5d2c9e7a6f8_add_market_orderbooks.py
docs/: api_credentials.md  missing_timeline.md  prd.md
runbooks/: backup-restore.md
scripts/: backup_db.sh  enrich_markets.py  probe_feeds.py  restore_db.sh  seed_dev_data.py  smoke_api.py  smoke_archive_replay.py  smoke_orderbook_archive.py  smoke_paper_flow.py  smoke_uvicorn.py  start_ingestion.py
sigil-frontend/: AGENTS.md  DESIGN.md  package-lock.json  package.json  vitest.config.ts
sigil-frontend/app/: globals.css  layout.tsx  page.test.tsx  page.tsx
sigil-frontend/components/: AppLayout.tsx  Sidebar.tsx  TopNav.tsx
src/sigil/: config.py  db.py  main.py  models.py  models_registry.py  secrets.py
stitch/data_pipeline_health/: code.html
stitch/execution_log_p_l/: code.html
stitch/main_dashboard/: code.html
stitch/market_browser/: arb_scanner.html  code.html
stitch/market_detail/: code.html
stitch/model_performance/: code.html
stitch/sigil_terminal/: DESIGN.md
tests/: conftest.py  test_main.py
tests/alerts/: test_telegram_routing.py
tests/api/: conftest.py  test_model_performance.py  test_routes.py  (+2 more)
(+174 files in other folders)
