[project]
name = "sigil"
version = "0.1.0"
description = "Sigil — modular prediction-market trading platform"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "aiosqlite>=0.19",
    "alembic>=1.13",
    "pydantic>=2.5",
    "httpx[http2]>=0.27",
    "websockets>=12",
    "pandas>=2.2",
    "python-dateutil>=2.9",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "rapidfuzz>=3.6",
    "apscheduler>=3.10",
    "cachetools>=5.3",
    "python-telegram-bot>=21",
    "pyyaml>=6.0",
    "matplotlib>=3.8",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "respx>=0.20",
    "freezegun>=1.4",
]

backtest = [
    "lightgbm>=4.3",
    "scikit-learn>=1.4",
    "joblib>=1.3",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q --strict-markers"
markers = [
    "critical: critical-path tests (must hit 100%)",
    "integration: tests that require external services",
    "slow: tests that take >5s",
]

[tool.coverage.run]
source = ["src/sigil"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
